--- a/src/styles/_projectsComponent.scss
+++ b/src/styles/_projectsComponent.scss
@@ -93,11 +93,13 @@
       display: flex;
       justify-content: space-between;
       width: 100%;
+      height: 100%;
       .previousButtonContainer {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-basis: 15%;
+        height: 100%;
         transition: 400ms;
         .previousButton {
           width: 98%;
@@ -127,6 +129,7 @@
         justify-content: center;
         align-items: center;
         flex-basis: 15%;
+        height: 100%;
         .nextButton {
           width: 98%;
           height: 95%;
@@ -152,6 +155,7 @@
       }
       .projectComponentContainer {
         flex-basis: 70%;
+        height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -165,13 +169,15 @@
           box-shadow: 0px 1px 14px 0px black;
           .textContainer {
             display: flex;
+            justify-content: center;
+            align-content: center;
             flex-direction: column;
-            flex-basis: 80%;
+            height: 80%;
             .projectName {
               display: flex;
               justify-content: center;
               align-items: center;
-              flex-basis: 70%;
+              height:35%;
               p {
                 font-family: $mainFontFamily;
                 font-size: $fontSizeLarge;
@@ -182,7 +188,7 @@
             }
             .projectSnippetContainer {
               display: flex;
-              flex-basis: 20%;
+              height:50%;
               justify-content: center;
               align-items: center;
               .projectSnippet {
@@ -206,7 +212,7 @@
           .readMoreButtonContainer {
             display:flex;
             justify-content: center;
-            flex-basis: 25%;
+            height: 20%;
             .readMoreButton {
               width: 50%;
               height: 70%;
